more fine tuning