@@ -1,11 +1,14 @@
 package offlineinstaller.offlineinstaller;
 import java.io.IOException;
+import java.util.Optional;
 
-import javax.swing.JOptionPane;
 import org.apache.log4j.Logger;
 import javafx.event.ActionEvent;
 import javafx.event.EventHandler;
+import javafx.scene.control.Alert;
 import javafx.scene.control.Button;
+import javafx.scene.control.ButtonType;
+import javafx.scene.control.Alert.AlertType;
 
 public class BtnStart extends Button implements EventHandler<ActionEvent> {
 	
@@ -15,27 +18,34 @@ public class BtnStart extends Button implements EventHandler<ActionEvent> {
 	}
 
 	final static Logger logger = Logger.getLogger(BtnStart.class);
-	private int dialogReturnValue;
+	public int dialogReturnValue;
 	private String path;
 	public void handle(ActionEvent event) {
 			
 			logger.info("Start button was clicked");
-			dialogReturnValue = JOptionPane.showConfirmDialog(null, "Are you sure you want to Start ?", "Start", JOptionPane.YES_NO_OPTION);
-			if (dialogReturnValue == 0) {
-				logger.info("Yes was pressed " + dialogReturnValue);
+			Alert alert = new Alert(AlertType.CONFIRMATION);
+			alert.setTitle("Offline Installation");
+			String s = "Are you sure you want to Start Installation ?";
+			alert.setContentText(s);
+			Optional<ButtonType> result = alert.showAndWait();
+			if ((result.get() == ButtonType.OK)){
+				logger.info("Yes was pressed ");
 				Runtime runtime = Runtime.getRuntime();
 				try {
-					path = PropertiesLoaderTest.getInstallerPath();
-					String teststring = "runas /noprofile /user:BAHCND52190DT administrator ping";
-					Runtime.getRuntime().exec(teststring);
-//					runtime.exec(new String[] {path}); 
+					path = PropertiesLoader.getInstallerPath();
+//					path = "cmd /c start cmd.exe /K \"dir && cd C:\\Users\\Administrator\\Downloads\\wsus\\cmd\\ && doUpdate.cmd\"";
+//					path = "cmd /c start cmd.exe /K \"dir && cd C:\\Users\\Administrator\\Downloads\\wsus\\cmd\\doUpdate.cmd\"";
+					Runtime.getRuntime().exec(path);
 				} catch (IOException e) {
 					e.printStackTrace();
 				}
-				
+			}else { if((result.get().equals(ButtonType.CANCEL))){
+				logger.info("Cancel was pressed " );			
 			}
+			}
+				
 			if (dialogReturnValue == 1) {
 				logger.info("No was pressed " + dialogReturnValue);
 			}
-		}
+	}
 	}
